[tool.poetry]
name = "charger-busy"
version = "0.1.0"
description = ""
authors = ["Moran Eden <moraned@etoro.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
requests = "^2.32.3"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
